parser/src/snapshots/squawk_parser__parse__tests__parse_alter_domain_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterDomainStmt(
                    Object({
                        "behavior": String(
                            "DROP_RESTRICT",
                        ),
                        "subtype": String(
                            "O",
                        ),
                        "typeName": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "zipcode",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    33,
                ),
            },
        ),
    ],
)
